--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.9.0",
+    "gulp-util": "~3.0.5",
     "gulp-jshint": "~1.11.0",
     "gulp-load-plugins": "~0.10.0",
     "gulp-ng-annotate": "~1.0.0",
     "gulp-tslint": "~2.0.0",
     "gulp-typescript": "^2.9.0",
     "gulp-uglify": "~1.2.0",
+    "del": "~1.2.0",
     "jshint-stylish": "~2.0.0",
     "karma": "~0.12.36",
     "karma-coverage": "^0.5.2",
@@ -27,6 +29,8 @@
     "karma-typescript-preprocessor": "0.0.19",
     "tsd": "~0.6.1",
     "phantomjs": "^1.9.0",
-    "typescript": "^1.6.2"
+    "typescript": "^1.6.2",
+    "wrench": "~1.5.8",
+    "tsd": "~0.6.1"
   }
 }
