--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "factories",
+  "name": "smartFactory",
   "version": "0.0.1",
   "description": "Factories for testing and prototyping angular projects",
   "main": "src/factories.js",
@@ -8,29 +8,39 @@
   },
   "author": "Ábner Oliveira <abner.silva@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "factory_girl": "0.2.2",
+    "faker": "~3.0.1",
+    "rosie": "^1.2.0"
+  },
   "devDependencies": {
+    "angular-mocks": "^1.4.6",
+    "angular": "^1.4.6",
+    "del": "~1.2.0",
     "gulp": "~3.9.0",
-    "gulp-util": "~3.0.5",
+    "gulp-browserify": "^0.5.1",
     "gulp-jshint": "~1.11.0",
     "gulp-load-plugins": "~0.10.0",
     "gulp-ng-annotate": "~1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-tslint": "~2.0.0",
     "gulp-typescript": "^2.9.0",
     "gulp-uglify": "~1.2.0",
-    "del": "~1.2.0",
+    "gulp-util": "~3.0.5",
     "jshint-stylish": "~2.0.0",
     "karma": "~0.12.36",
+    "karma-browserify": "^4.3.0",
+    "karma-notify-reporter": "^0.1.1",
+    "karma-commonjs": "0.0.13",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "~0.3.5",
     "karma-jasmine-matchers": "^0.1.3",
     "karma-phantomjs-launcher": "~0.2.0",
     "karma-spec-reporter": "0.0.20",
     "karma-typescript-preprocessor": "0.0.19",
-    "tsd": "~0.6.1",
     "phantomjs": "^1.9.0",
+    "tsd": "~0.6.1",
     "typescript": "^1.6.2",
-    "wrench": "~1.5.8",
-    "tsd": "~0.6.1"
+    "wrench": "~1.5.8"
   }
 }
