firt version. small fixes

--- a/bower.json
+++ b/bower.json
@@ -24,10 +24,5 @@
     "tests"
   ],
   "dependencies": {},
-  "devDependencies": {
-    "angular": "~1.4.6",
-    "angular-mocks": "~1.4.6",
-    "jasmine": "~2.3.4",
-    "jasmine-expect": "~2.0.0-beta2"
-  }
+  "devDependencies": {}
 }
