changed name to angular-smartfactory

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartFactory",
+  "name": "angular-smartfactory",
   "version": "0.0.1",
   "authors": [
     "Abner Oliveira <abner.silva@gmail.com>"
