--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "rosie": "^1.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.6",
     "angular": "^1.4.6",
+    "angular-mocks": "^1.4.6",
     "del": "~1.2.0",
     "gulp": "~3.9.0",
     "gulp-browserify": "^0.5.1",
@@ -33,6 +33,7 @@
     "gulp-load-plugins": "~0.10.0",
     "gulp-ng-annotate": "~1.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-tslint": "~2.0.0",
     "gulp-typescript": "^2.9.0",
     "gulp-uglify": "~1.2.0",
@@ -40,11 +41,11 @@
     "jshint-stylish": "~2.0.0",
     "karma": "~0.12.36",
     "karma-browserify": "^4.3.0",
-    "karma-notify-reporter": "^0.1.1",
     "karma-commonjs": "0.0.13",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "~0.3.5",
     "karma-jasmine-matchers": "^0.1.3",
+    "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "~0.2.0",
     "karma-spec-reporter": "0.0.20",
     "karma-typescript-preprocessor": "0.0.19",
