--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,6 @@
 general:
   artifacts:
-      - "coverage/"
+      - "coverage"
 dependencies:
   pre:
       - npm update
-  post:
-      - mv coverage $
