template to changes using IIFE

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
         "./src/ts/configDecorator.ts",
         "./src/ts/factories.spec.ts",
         "./src/ts/factories.ts",
-        "./src/ts/faker.d.ts"
+        "./src/ts/faker.d.ts",
+        "./src/ts/test.ts"
     ]
 }
