--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-smartfactory",
   "version": "0.0.3",
   "description": "Factories for testing and prototyping angular projects",
-  "main": "dist/smartFactory.js",
+  "main": "index.js",
   "scripts": {
     "test": "gulp"
   },
@@ -26,13 +26,10 @@
   "devDependencies": {
     "angular": "^1.4.6",
     "angular-mocks": "^1.4.6",
-    "browserify-istanbul": "^0.2.1",
     "del": "~1.2.0",
     "gulp": "~3.9.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-jshint": "~1.11.0",
     "gulp-load-plugins": "~0.10.0",
-    "gulp-ng-annotate": "~1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-tslint": "~2.0.0",
@@ -40,9 +37,7 @@
     "gulp-uglify": "~1.2.0",
     "gulp-util": "~3.0.5",
     "jshint-stylish": "~2.0.0",
-    "karma": "~0.12.36",
-    "karma-browserify": "^4.3.0",
-    "karma-commonjs": "0.0.13",
+    "karma": "~0.13.0",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "~0.3.5",
     "karma-jasmine-matchers": "^0.1.3",
@@ -53,6 +48,7 @@
     "phantomjs": "^1.9.0",
     "tsd": "~0.6.1",
     "typescript": "^1.6.2",
-    "wrench": "~1.5.8"
+    "wrench": "~1.5.8",
+    "remap-istanbul": "~0.3.0"
   }
 }
