--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "version": "1.6.2",
-    "compileOnSave": true,
+    "compileOnSave": false,
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "moduleResolution": "node",
         "isolatedModules": false,
         "jsx": "react",
         "experimentalDecorators": true,
@@ -18,23 +17,24 @@
         "outDir": "src/"
     },
     "filesGlob": [
+        ".tmp/typings/tsd.d.ts",
         ".tmp/typings/**/*.d.ts",
+        "!.dist/typings/**/*.d.ts",
         "./**/*.ts",
         "./**/*.tsx",
         "!./node_modules/**/*"
     ],
     "files": [
+        ".tmp/typings/tsd.d.ts",
         ".tmp/typings/angularjs/angular-mocks.d.ts",
         ".tmp/typings/angularjs/angular.d.ts",
         ".tmp/typings/faker/faker.d.ts",
         ".tmp/typings/jasmine/jasmine.d.ts",
         ".tmp/typings/jquery/jquery.d.ts",
         ".tmp/typings/requirejs/require.d.ts",
-        ".tmp/typings/tsd.d.ts",
-        "./src/ts/configDecorator.ts",
-        "./src/ts/factories.spec.ts",
-        "./src/ts/factories.ts",
-        "./src/ts/faker.d.ts",
-        "./src/ts/test.ts"
+        "./src/ts/smartFactory.d.ts",
+        "./src/ts/smartFactory.spec.ts",
+        "./src/ts/smartFactory.ts",
+        "./src/ts/smartFactoryConfig.ts"
     ]
 }
