--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,9 @@
     "test",
     "tests"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "rosie": "~1.2.0",
+    "faker": "~0.0.2"
+  },
   "devDependencies": {}
 }
