added rosie definitions. changed to use Factory instead of wrapper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
         "./src/ts/smartFactory.d.ts",
         "./src/ts/smartFactory.spec.ts",
         "./src/ts/smartFactory.ts",
-        "./src/ts/smartFactoryConfig.ts"
+        "./src/ts/smartFactoryConfig.ts",
+        "./src/typings/rosie.d.ts"
     ]
 }
